--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
+  "engines": {
+    "node": "18.17.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
